# bdc_research_docs

./: .gitignore  README.md  bdc_real_statemant.md  memory.md
project_documentation_snapshot_2026-03-18/: AGENTS_LOG.md  ARCHITECTURE.md  BDC_HIVE_ARCHITECTURE.md  CANON.md  CANONICAL_DOCS_MAP.md  CANONICAL_LIMITS_AND_PROHIBITIONS.md  CHECKPOINT_SYSTEM_V2.md  POPULATION_AND_SCALING.md  SEED_POLICY.md  VERSIONING.md  WEEKLY_STATUS.md  bdc_orchestrator.md  codex.md  docker-compose.yml  environment_snapshot.json  pyproject.toml  snapshot_counts.json  snapshot_manifest.json
project_documentation_snapshot_2026-03-18/decisions/: ADR-0001-docs-sources-of-truth.md  ADR-0003-append-only-agents-weekly.md  ADR-0007-collective-fitness.md  ADR-0010-phase4-3task-gate-governance.md
project_documentation_snapshot_2026-03-18/dissertation_core/: EVOLUTION_ENGINE.md  RESEARCH_METHODOLOGY.md  SEMANTICS.md
project_documentation_snapshot_2026-03-18/docs/: BDC_CLIENT_PACKET_WORKFLOW.md  BDC_CLIENT_PRESENTATION_BRIEF.md  BDC_CLI_V1_CANONICAL_FAILURE_CASES.md  BDC_CLI_V1_LIMITATIONS_AND_GAPS.md  BDC_CLI_V2_INSTALL_AND_RUN.md  BDC_CLI_V2_MIGRATION_GUIDE.md  BDC_CLI_V2_USER_GUIDE.md  BDC_CUSTOMER_PROOF_SYSTEM.md  BDC_DESIGNER_CLI_USAGE.md  BDC_INBOUND_AUTHORITY_PLAYBOOK.md  BDC_INSTALL_AND_RUN.md  BDC_LLM_ADAPTER_PROMPT_CONTRACTS.md  BDC_MEASUREMENT_GAP_DETECTOR.md  BDC_PACKET_V2_EXAMPLES.md  BDC_RETAINER_AND_EXPANSION_PLAYBOOK.md  BDC_STRATEGY_EXPLANATION_CONTRACT_V2.md  COGNITIVE_PROTOCOL.md  EXPERIMENT_VISUALIZATION_PACMAN.md  GITHUB_SETTINGS_REPORT_2026-01-07.md  GIT_ARTIFACT_POLICY.md  (+4 more)
(+1130 files in other folders)
